--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo 'hot dog'"
   },
   "dependencies": {
-    "is-number": "^7.0.0"
+    "is-number": "^7.0.0",
+    "react": "^19.1.1"
   },
   "repository": {
     "type": "git",
